recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.error
DragonCurve2:14: error: not found: value u
u = (x + z)/2 - (t - y)/2
^DragonCurve2:15: error: not found: value v
v = (y + t)/2 + (z - x)/2
^DragonCurve2:17: error: not found: value u
			dragon(order-1,x,y,u,v);
                                           ^DragonCurve2:18: error: not found: value u
			dragon(order-1,z,t,u,v);
                                           ^